add networkOptions in api
